// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlipCard changes the class when hovered 1`] = `
<div
  className="col-xs-12 col-md-6 col-lg-3"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "height": "250px",
      "perspective": "800px",
    }
  }
>
  <div
    style={
      Object {
        "backfaceVisibility": "hidden",
        "transform": "rotateY(0deg)",
        "transformStyle": "preserve-3d",
        "transition": "transform 1s linear",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backfaceVisibility": "hidden",
          "position": "absolute",
          "top": "0",
          "width": "100%",
        }
      }
    >
      <i
        aria-hidden="true"
        className="fa fa-5x fa-github"
        style={
          Object {
            "color": "#f00",
            "fontSize": "10em",
          }
        }
      />
      <div
        className="text-uppercase"
        style={
          Object {
            "fontSize": "1.5em",
          }
        }
      >
        Hello
      </div>
    </div>
    <div
      style={
        Object {
          "backfaceVisibility": "hidden",
          "position": "absolute",
          "top": "0",
          "transform": "rotateY(180deg)",
          "width": "100%",
        }
      }
    >
      <div
        className="p-2"
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid #f00",
            "borderRadius": "5px",
            "display": "flex",
            "height": "175px",
            "margin": "auto",
            "width": "50%",
          }
        }
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`FlipCard changes the class when hovered 2`] = `
<div
  className="col-xs-12 col-md-6 col-lg-3"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "height": "250px",
      "perspective": "800px",
    }
  }
>
  <div
    style={
      Object {
        "backfaceVisibility": "hidden",
        "transform": "rotateY(180deg)",
        "transformStyle": "preserve-3d",
        "transition": "transform 1s linear",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backfaceVisibility": "hidden",
          "position": "absolute",
          "top": "0",
          "width": "100%",
        }
      }
    >
      <i
        aria-hidden="true"
        className="fa fa-5x fa-github"
        style={
          Object {
            "color": "#f00",
            "fontSize": "10em",
          }
        }
      />
      <div
        className="text-uppercase"
        style={
          Object {
            "fontSize": "1.5em",
          }
        }
      >
        Hello
      </div>
    </div>
    <div
      style={
        Object {
          "backfaceVisibility": "hidden",
          "position": "absolute",
          "top": "0",
          "transform": "rotateY(180deg)",
          "width": "100%",
        }
      }
    >
      <div
        className="p-2"
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid #f00",
            "borderRadius": "5px",
            "display": "flex",
            "height": "175px",
            "margin": "auto",
            "width": "50%",
          }
        }
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`FlipCard changes the class when hovered 3`] = `
<div
  className="col-xs-12 col-md-6 col-lg-3"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "height": "250px",
      "perspective": "800px",
    }
  }
>
  <div
    style={
      Object {
        "backfaceVisibility": "hidden",
        "transform": "rotateY(0deg)",
        "transformStyle": "preserve-3d",
        "transition": "transform 1s linear",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backfaceVisibility": "hidden",
          "position": "absolute",
          "top": "0",
          "width": "100%",
        }
      }
    >
      <i
        aria-hidden="true"
        className="fa fa-5x fa-github"
        style={
          Object {
            "color": "#f00",
            "fontSize": "10em",
          }
        }
      />
      <div
        className="text-uppercase"
        style={
          Object {
            "fontSize": "1.5em",
          }
        }
      >
        Hello
      </div>
    </div>
    <div
      style={
        Object {
          "backfaceVisibility": "hidden",
          "position": "absolute",
          "top": "0",
          "transform": "rotateY(180deg)",
          "width": "100%",
        }
      }
    >
      <div
        className="p-2"
        style={
          Object {
            "alignItems": "center",
            "border": "1px solid #f00",
            "borderRadius": "5px",
            "display": "flex",
            "height": "175px",
            "margin": "auto",
            "width": "50%",
          }
        }
      >
        test
      </div>
    </div>
  </div>
</div>
`;
